# db

./: CURRENT_ARCH.md  Cargo.toml  justfile
crates/catalog/: Cargo.toml
crates/catalog/benches/: insert.rs
crates/catalog/src/: database.rs  table.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/execution/: Cargo.toml
crates/execution/benches/: query.rs
crates/execution/src/: execute.rs  physical_plan.rs
crates/lsdb-catalog/: Cargo.toml
crates/lsdb-cli/: Cargo.toml
crates/lsdb-execution/: Cargo.toml
crates/lsdb-mvcc/: Cargo.toml
crates/lsdb-optimizer/: Cargo.toml
crates/lsdb-scheduler/: Cargo.toml
crates/lsdb-sql/: Cargo.toml
crates/lsdb-storage/: Cargo.toml
crates/lsdb-storage/src/: column_segment.rs  column_statistics.rs  table_partition.rs
crates/lsdb-types/: Cargo.toml
crates/lsdb-types/src/exec/: data_chunk.rs
crates/lsdb-wal/: Cargo.toml
crates/mvcc/: Cargo.toml
crates/optimizer/: Cargo.toml
crates/optimizer/src/: build_plan.rs  optimize.rs
crates/scheduler/: Cargo.toml
crates/server/: Cargo.toml
crates/sql/: Cargo.toml
crates/sql/src/: bind.rs  translate.rs
crates/storage/: Cargo.toml
crates/storage/src/: column_segment.rs  column_statistics.rs  table_partition.rs  zone_map.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
crates/types/src/exec/: flat_vector.rs  mod.rs  vector.rs
crates/wal/: Cargo.toml
