[package]
name = "cli"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/wyattgill9/db"
license = "MIT"

[[bin]]
name = "db"
path = "src/main.rs"

[dependencies]
catalog = { path = "../catalog" }
execution = { path = "../execution" }
optimizer = { path = "../optimizer" }
sql = { path = "../sql" }
storage = { path = "../storage" }
types = { path = "../types" }
