[package]
name = "execution"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/wyattgill9/db"
license = "MIT"

[[bench]]
harness = false
name = "query"

[dependencies]
catalog = { path = "../catalog" }
storage = { path = "../storage" }
types = { path = "../types" }

[dev-dependencies]
criterion = { workspace = true }
zerocopy = { workspace = true }
