[package]
name = "lsdb-cli"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/wyattgill9/db"
license = "MIT"

[[bin]]
name = "db"
path = "src/main.rs"

[dependencies]
lsdb-catalog = { path = "../lsdb-catalog" }
lsdb-execution = { path = "../lsdb-execution" }
lsdb-optimizer = { path = "../lsdb-optimizer" }
lsdb-sql = { path = "../lsdb-sql" }
lsdb-storage = { path = "../lsdb-storage" }
lsdb-types = { path = "../lsdb-types" }
