[package]
name = "storage"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/wyattgill9/db"
license = "MIT"

[dependencies]
types = { path = "../types" }

cardinality-estimator = { workspace = true }
fastbloom = { workspace = true }
rapidhash = { workspace = true }
zerocopy = { workspace = true }
